[tool.poetry]
name = "py-sandbox"
version = "0.1.0"
description = ""
authors = ["42zoko9 <hexproof1988@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^4.0.1"
black = "^22.1.0"
mypy = "^0.931"
isort = "^5.10.1"
pytest = "^7.0.1"
tox = "^3.24.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
